// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Breadcrumb renders Breadcrumb with customized separator correctly 1`] = `
<div
  class="zw-breadcrumb"
>
  <span
    class=""
  >
    <span
      class="zw-breadcrumb-item__link"
    >
      一级菜单
    </span>
    <span
      class="zw-breadcrumb-item__separator"
    >
      &gt;
    </span>
  </span>
  <span
    class=""
  >
    <span
      class="zw-breadcrumb-item__link"
    >
      二级菜单
    </span>
    <span
      class="zw-breadcrumb-item__separator"
    >
      &gt;
    </span>
  </span>
  <span
    class=""
  >
    <a
      class="zw-breadcrumb-item__link"
      href="https://t.zhongan.com"
    >
      三级菜单
    </a>
    <span
      class="zw-breadcrumb-item__separator"
    >
      &gt;
    </span>
  </span>
</div>
`;

exports[`Breadcrumb renders basic Breadcrumb correctly 1`] = `
<div
  class="za-breadcrumb"
>
  <span
    class=""
  >
    <span
      class="zw-breadcrumb-item__link"
    >
      一级菜单
    </span>
    <span
      class="zw-breadcrumb-item__separator"
    >
      /
    </span>
  </span>
  <span
    class=""
  >
    <span
      class="zw-breadcrumb-item__link"
    >
      二级菜单
    </span>
    <span
      class="zw-breadcrumb-item__separator"
    >
      /
    </span>
  </span>
  <span
    class=""
  >
    <a
      class="zw-breadcrumb-item__link"
      href="https://t.zhongan.com"
    >
      三级菜单
    </a>
    <span
      class="zw-breadcrumb-item__separator"
    >
      /
    </span>
  </span>
</div>
`;
